[package]
name = "cppvtable-macro"
version = "0.1.0"
edition = "2024"
description = "Proc-macros for cppvtable"
license = "MIT"
repository = "https://github.com/coconutbird/cppvtable"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

